--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 		</section>
 
 		<section style="float: left; width: 50%;">
-			<div id="file-container"></div>
+			<div>
+				<ul id="file-container"></ul>
+			</div>
 		</section>
 		
 		<script>
