Add possibility to upload several files

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<section id="upload">
 				<h2>Add file</h2>
 				<p>
-					<input type="file" class="file-input" />
+					<input type="file" class="file-input" multiple />
 				</p>
 			</section>
 
