--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<form>
 					<p>
 						<label for="identity">Choose a nickname</label>
-						<input id="identity" class="block" type="text" autofocus required />
+						<input id="identity" class="block" type="text" value="legogris" autofocus required />
 					</p>
 
 					<input type="submit" class="connect block" value="Get started" />
