--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		</script>
 
 		<script src="node_modules/jquery/dist/jquery.min.js"></script>
-		<script src="node_modules/peerjs/dist/peer.js"></script>
+		<script src="vendors/peer.js"></script>
 		<script src="node_modules/underscore/underscore.js"></script>
 		<script src="node_modules/backbone/backbone.js"></script>
 		<script src="build/bundle.js"></script>
