--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<script type="text/html" id="file-template">
 			<span class="resource" data-guid="<%= guid %>">
 				<span class="file-name"><%= name%></span>
-				<a class="file-link" href="<%= url %>">View</a>
+				<a class="file-link" href="<%= url %>" target="_blank">View</a>
 				<small class="file-type"><%= type %></small>
 			</span>
 
