--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</script>
 
 		<script type="text/html" id="file-template">
-			<span class="resource" data-guid="<%= guid %>">
+			<span class="resource" data-guid="<%= id %>">
 				<span class="file-name"><%= name%></span>
 				<a class="file-link" href="<%= url %>">View</a>
 				<small class="file-type"><%= type %></small>
