Add new Shuttle logotype and change colour scheme

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 	<body>
 		<header role="banner">
-			<h1>Shuttle</h1>
+			<h1><img class="logo" src="images/shuttle_logotype.png" alt="Shuttle" /> Shuttle</h1>
+
 			<p class="subhead">A secure, server-less file<br /> sharing app built with <a href="http://github.com/rymdjs">Rymd</a></p>
 		</header>
 
