Add UI notifications for share/request events

--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
 		<script type="text/html" id="file-template">
 			<span class="resource" data-guid="<%= id %>" >
 				<span class="file-name"><%= name%></span>
-				<small class="file-type"><%= type %></small>
-                <% if(hasData) { %>
+				<% if(hasData) { %>
 				<a class="file-link" href="<%= url %>" target="_blank">View</a>
-                <%} else { %>
-				<button class="download-file small">Download</button>
-                <% } %>
+        <% } %>
+				<small class="file-type"><%= type %></small>
 			</span>
 
 			<div class="sharing-panel" hidden>
@@ -73,12 +71,20 @@
 
 		<script src="node_modules/jquery/dist/jquery.min.js"></script>
 		<script src="vendors/peer.js"></script>
+		<script src="vendors/jquery.noty/js/noty/packaged/jquery.noty.packaged.min.js"></script>
 		<script src="node_modules/underscore/underscore.js"></script>
 		<script src="node_modules/backbone/backbone.js"></script>
 		<script src="build/bundle.js"></script>
 
 		<script>
 			$(function() {
+				$.noty.defaults = $.extend({}, $.noty.defaults, {
+					layout: 'topRight',
+					type: 'information'
+				});
+
+				$.noty.defaults.animation.speed = 300;
+
 				App.start();
 			})
 		</script>
