Use custom Backbone adapter that syncs with Rymd::ResourceStore

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<section id="upload">
 				<h2>Add file</h2>
 				<p>
-					<input type="file" class="file-input" multiple />
+					<input type="file" class="file-input" />
 				</p>
 			</section>
 
