Add click listener on view, then get decrypted resource data

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<span class="file-name"><%= name%></span>
 				<small class="file-type"><%= type %></small>
                 <% if(hasData) { %>
-				<a class="file-link" href="<%= url %>" target="_blank">View</a>
+				<a class="file-link view-file" href="<%= url %>" target="_blank">View</a>
                 <%} else { %>
 				<button class="download-file small">Download</button>
                 <% } %>
