Implement sessions management

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
 		<script type="text/html" id="home-template">
 			<header class="toolbar">
-				<div class="current-identity"></div>
+				<p>
+					<span class="current-identity"></span> · <a href="/#logout">Sign out</a>
+				</p>
+
 				<div class="dropdown">
 					<a class="dropdown-trigger">Inbox <span class="shared-count"></span></a>
 					<div class="dropdown-content" id="my-shared-files">
