--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 			<div class="sharing-panel" hidden>
 				<label>Share with</label><input type="text" class="remote-identity" />
 				<button class="share-file small">Share</button>
+
+				<button class="btn-negative small destroy">Delete</button>
 			</div>
 		</script>
 
