--- a/index.html
+++ b/index.html
@@ -77,8 +77,14 @@
 				<div id="generate-key" style="display: none;">
 				<form>
 					<p>
-						<label for="key"></label>
-						<input id="identity" class="block" type="text" value="" autofocus required />
+						<table border="1">
+						<tr>
+						  <td id="private">/</td>
+						  </tr>
+						<tr>
+						  <td id="public">/</td>
+						</tr>
+						</table>
 					</p>
 					<input type="submit" class="connect block" value="Next" />
 				</form>
